Fix backend integration and data initialization
- Linked all frontend and backend files with proper API calls.
- Created a `DataInitializer` class in Java to store lookup data in the H2 database.
- Resolved the `List.of` error in `UserPrincipal` to use `Arrays.asList` for Java 8 compatibility.